# deus

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt  readme.md  sandbox.cmd  sandbox.wsb  solution.sln
cmake/: deus-config.cmake
include/: deus.hpp
include/deus/: device.hpp  error.hpp  keyboard.hpp  list.hpp  result.hpp  utility.hpp
res/: config.cmake.in
src/: deus.cpp  deus.cxx  deus.h  deus.hpp  deus.vcxproj  deus.vcxproj.filters  main.cpp  main.manifest  main.rc  ntdll.hpp  test.cpp  test.rc  test.vcxproj  test.vcxproj.filters
